--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -3,6 +3,7 @@
   top: 60px;
   left: 20%;
   width: 60%;
+  min-width: fit-content;
   height: fit-content;
   border-radius: 20px;
   backdrop-filter: blur(10px);
@@ -11,17 +12,7 @@
   padding: 15px 20px;
   box-sizing: border-box;
   z-index: 1000;
-}
-
-.innerContainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  list-style: none;
-  font-family: Avenir Next-Bold, Avenir Next;
-  font-size: 1rem;
-  leading-size: 3rem;
-  font-weight: 600;
+  @apply hidden md:block;
 }
 
 .link {
